--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,8 +7,8 @@ spring:
 
   jpa:
     # properties:
-    # hibernate.format_sql: TRUE
-    # hibernate.dialect: org.hibernate.dialect.MySQLDialect
+      # hibernate.format_sql: TRUE
+      # hibernate.dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
 
@@ -20,5 +20,10 @@ logging:
     # org.hibernate.type.descriptor: TRACE
 api:
   ninjas:
-    url: https://api.api-ninjas.com/v1/facts
     apiKey: ${NINJAS_API_KEY}
+    facts:
+      url: https://api.api-ninjas.com/v1/facts
+    jokes:
+      url: https://api.api-ninjas.com/v1/jokes
+    trivia:
+      url: https://api.api-ninjas.com/v1/trivia
