--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -7,8 +10,8 @@ spring:
 
   jpa:
     # properties:
-      # hibernate.format_sql: TRUE
-      # hibernate.dialect: org.hibernate.dialect.MySQLDialect
+    # hibernate.format_sql: TRUE
+    # hibernate.dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
 
@@ -18,12 +21,3 @@ logging:
     blog: WARN
     # org.hibernate.SQL: DEBUG
     # org.hibernate.type.descriptor: TRACE
-api:
-  ninjas:
-    apiKey: ${NINJAS_API_KEY}
-    facts:
-      url: https://api.api-ninjas.com/v1/facts
-    jokes:
-      url: https://api.api-ninjas.com/v1/jokes
-    trivia:
-      url: https://api.api-ninjas.com/v1/trivia
