--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,3 +30,5 @@ ninja:
       url: http://localhost:8081/ninja/api/facts
     jokes:
       url: http://localhost:8081/ninja/api/jokes
+    quotes:
+      url: http://localhost:8081/ninja/api/quotes
