--- a/TestingEz/src/main/resources/application.yaml
+++ b/TestingEz/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/testingez_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
     username: root
-    password: 1234
+    password:
 
   jpa:
     # properties:
