--- a/TestingEz/src/main/resources/application.yaml
+++ b/TestingEz/src/main/resources/application.yaml
@@ -32,5 +32,5 @@ ninja:
       url: http://localhost:8081/ninja/api/jokes
     quotes:
       url: http://localhost:8081/ninja/api/quotes
-    improvements:
-      url: http://localhost:8081/ninja/api/improvements
+    feedback:
+      url: http://localhost:8081/ninja/api/feedback
