--- a/ninja-service/src/main/resources/application.properties
+++ b/ninja-service/src/main/resources/application.properties
@@ -1,22 +1,17 @@
 # General
+spring.application.name=ninja-service
 server.port=${SERVER_PORT:8081}
+spring.config.import=optional:file:.env[.properties]
 
 # Datasource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:}${DB_OPTIONS:}
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:ninja_db}${DB_OPTIONS:}
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:}
 
 # JPA
-spring.jpa.properties.hibernate.format_sql=TRUE
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
-
-# Logging
-logging.level.org=WARN
-logging.level.blog=WARN
-logging.level.org.hibernate.SQL=DEBUG
-# org.hibernate.type.descriptor=TRACE
+spring.jpa.open-in-view=true
 
 # API
 api.ninjas.api-key=${NINJAS_API_KEY}
